version/0.14/_sources/api/solver/_autosummary/settings/lennard_jones_energy.rst.txt
:orphan:

.. _lennard_jones_energy:

lennard_jones_energy
====================

.. autoclass:: ansys.fluent.core.solver.settings_231.lennard_jones_energy.lennard_jones_energy

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

