version/0.22/_sources/api/solver/_autosummary/settings/lennard_jones_energy.rst.txt
:orphan:

.. _lennard_jones_energy:

lennard_jones_energy
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.lennard_jones_energy.lennard_jones_energy
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

